--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "add": "^2.0.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
+    "firebase": "^9.17.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "4.9.5",
-    "typewriter-effect": "^2.19.0"
+    "typewriter-effect": "^2.19.0",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/react-syntax-highlighter": "^15.5.6"
